service.yaml
apiVersion: v1
kind: Service

metadata:
  name: chatbot-service

spec:
  type: LoadBalancer

  selector:
    app: chatbot

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
