ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: chatbot-ingress

spec:
  ingressClassName: nginx

  rules:
    - host: chatbot.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chatbot-service
                port:
                  number: 80
